# heat-transfer-fortran

./: CMakeLists.txt  README.md  heat_transfer.F90  heat_transfer_error.F90  run.sh  visualise_error.py
problems/: heat-transfer.F90  heat_transfer.F90
results/: error_data16.txt  error_data4.txt  error_data8.txt
src/: fdm.F90  gauss.F90  gauss.fun
